<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sample.app.firebase.TaskCreation"
    tools:showIn="@layout/activity_task_creation">

    <EditText
        android:id="@+id/taskDeadline"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="Enter Deadline"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        app:layout_constraintVertical_bias="0.184" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="291dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Task Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="Add Task"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDeadline"
        app:layout_constraintVertical_bias="0.771" />
</androidx.constraintlayout.widget.ConstraintLayout>
