...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/tabsExampleButton"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="Start"
        android:textAllCaps="true"
...
